--- a/serenity-app/res/layout/activity_plex_app_main.xml
+++ b/serenity-app/res/layout/activity_plex_app_main.xml
@@ -21,6 +21,8 @@
             android:textColor="#F0F0F0"
             android:textSize="20sp" />
     </LinearLayout>
+    
+    
 
     <LinearLayout
         android:id="@+id/menu_gallery"
@@ -36,7 +38,8 @@
             android:layout_height="150dp"
             android:animationDuration="1"
             android:background="#50000000"
-            android:spacing="50dp" >
+            android:spacing="50dp"
+            android:layout_gravity="center_vertical">
 
             <requestFocus />
         </Gallery>
