Issue #46: Fix banner image vertical stretching.
This fixes the banner images and the big poster so that their aspect
ratios and sizes are kept in line with the 720p versions.  It calculates
based on pixel size and then produces the appropriate dpi size to be used.

--- a/serenity-app/res/layout/activity_tvbrowser_show.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show.xml
@@ -163,7 +163,7 @@
             <Gallery
                 android:id="@+id/tvShowBannerGallery"
                 android:layout_width="fill_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:animationDuration="1"
                 android:background="#50000000"
                 android:spacing="10dp" >
