Issue #51: Fix aspect ratio of episode images
Fix the aspect ratio and increase the size of the images displayed for
the episodes when browsing through a tv show series.

--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -269,9 +269,9 @@
         <us.nineworlds.serenity.widgets.SerenityGallery
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:animationDuration="1"
-            android:background="#D0000000"
+            android:background="@android:color/background_dark"
             android:spacing="25dp" >
 
             <requestFocus />
