Issue #50: Movie Posters squished horizontally
Applied similar fix as to TV Shows.
* Dynamically adjust dpi size based on screen densisty
* Clean up TV Shows screen for a cleaner look.
* Increase the size of the Posters for Movies
* Increase the size of the Posters for TV Show Seasons.

--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -257,21 +257,22 @@
 
     <LinearLayout
         android:id="@+id/tableRow2"
-        android:layout_width="900dip"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dip"
-        android:gravity="bottom" >
+        android:padding="5dp"
+        android:gravity="bottom"
+        android:background="#AA000000" >
 
         <us.nineworlds.serenity.widgets.SerenityGallery
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animationDuration="1"
-            android:background="@android:color/background_dark"
             android:spacing="25dp" >
 
             <requestFocus />
