--- a/serenity-app/res/drawable/gallery_item_background.xml
+++ b/serenity-app/res/drawable/gallery_item_background.xml
@@ -15,13 +15,13 @@
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_activated="true"
-        android:drawable="@android:color/black"
+        android:drawable="@android:color/transparent"
         />
     <item android:state_selected="true" android:drawable="@color/holo_color" android:state_pressed="false"/>
     <item android:state_selected="true" android:drawable="@android:color/background_light" android:state_pressed="true"/>
     
     <item
-        android:drawable="@android:color/black"
+        android:drawable="@android:color/transparent"
         />
 </selector>
 
