--- a/serenity-app/res/layout/activity_tvbrowser_show.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show.xml
@@ -14,7 +14,7 @@
         android:background="#A0000000"
         android:orientation="horizontal" >
 
-        <TextView
+<!--         <TextView
             android:id="@+id/tvShowDetailText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
             android:textColor="#F0F0F0"
             android:textSize="20sp" >
         </TextView>
-        
+-->        
         <TextView
             android:id="@+id/tvshow_CategoryName"
             android:layout_width="wrap_content"
@@ -158,7 +158,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp" >
 
             <Gallery
                 android:id="@+id/tvShowBannerGallery"
@@ -166,7 +167,8 @@
                 android:layout_height="wrap_content"
                 android:animationDuration="1"
                 android:background="#50000000"
-                android:spacing="10dp" >
+                android:spacing="10dp"
+                android:padding="5dp" >
 
                 <requestFocus />
             </Gallery>
