--- a/serenity-app/res/layout/activity_tvbrowser_show.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/tvshows"
     android:orientation="vertical"
     tools:context=".ui.browser.tv.TVShowBrowserActivity" >
-    
+
     <LinearLayout
         android:id="@+id/tvLine1"
         android:layout_width="match_parent"
@@ -14,24 +14,14 @@
         android:background="#A0000000"
         android:orientation="horizontal" >
 
-<!--         <TextView
-            android:id="@+id/tvShowDetailText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="@string/tvshows"
-            android:textColor="#F0F0F0"
-            android:textSize="20sp" >
-        </TextView>
--->        
         <TextView
             android:id="@+id/tvshow_CategoryName"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:focusable="false"
-            android:text="@string/category"
-            style="@android:style/TextAppearance.Medium" />
+            android:text="@string/category" />
 
         <Spinner
             android:id="@+id/tvshow_CategoryFilter"
@@ -54,7 +44,7 @@
             android:gravity="left"
             android:prompt="@string/movie_category_prompt2"
             android:spinnerMode="dropdown"
-            android:visibility="invisible" />  
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/tvShowItemCount"
@@ -65,9 +55,9 @@
             android:textColor="#F0F0F0"
             android:textSize="20sp"
             tools:ignore="SelectableText" >
-
         </TextView>
     </LinearLayout>
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -79,8 +69,8 @@
             android:id="@+id/tvShowInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="100dp"
+            android:layout_marginTop="30dp"
             android:orientation="vertical" >
 
             <ImageView
@@ -92,27 +82,37 @@
                 android:padding="2dp"
                 android:scaleType="fitXY"
                 tools:ignore="ContentDescription" />
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="600dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="80dp"
+            android:layout_marginTop="30dp"
             android:layout_toRightOf="@+id/tvShowInfo"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/tvBrowserTitle"
-                style="@android:style/TextAppearance.Large"
-                android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
-                android:textColor="#F0F0F0"
-                tools:ignore="SelectableText" >
+                android:orientation="horizontal" >
 
-            </TextView>
+                <TextView
+                    android:id="@+id/tvBrowserTitle"
+                    style="@android:style/TextAppearance.Large"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:textColor="#F0F0F0"
+                    tools:ignore="SelectableText" >
+                </TextView>
+                
+                <ImageView android:id="@+id/tvShowRating" 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"/>            
+                
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvShowSeriesSummary"
@@ -124,7 +124,6 @@
                 android:gravity="top"
                 android:textColor="#F0F0F0"
                 tools:ignore="SelectableText" >
-
             </TextView>
 
             <TextView
@@ -137,7 +136,6 @@
                 android:gravity="center"
                 android:textColor="#F0F0F0"
                 tools:ignore="SelectableText" >
-
             </TextView>
 
             <TextView
@@ -150,7 +148,6 @@
                 android:gravity="center"
                 android:textColor="#F0F0F0"
                 tools:ignore="SelectableText" >
-
             </TextView>
         </LinearLayout>
 
@@ -158,8 +155,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp" >
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical" >
 
             <Gallery
                 android:id="@+id/tvShowBannerGallery"
@@ -167,8 +164,8 @@
                 android:layout_height="wrap_content"
                 android:animationDuration="1"
                 android:background="#50000000"
-                android:spacing="10dp"
-                android:padding="5dp" >
+                android:padding="5dp"
+                android:spacing="10dp" >
 
                 <requestFocus />
             </Gallery>
