--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
@@ -7,7 +8,7 @@
     android:orientation="vertical"
     android:padding="5dp"
     tools:context=".ui.browser.movie.MovieBrowserActivity" >
-
+    
     <LinearLayout
         android:id="@+id/metaDataRow"
         android:layout_width="fill_parent"
@@ -50,6 +51,7 @@
             android:spinnerMode="dropdown"
             android:visibility="invisible" />
     </LinearLayout>
+    
 
     <LinearLayout
         android:id="@+id/video_title_row"
@@ -278,5 +280,18 @@
             <requestFocus />
         </us.nineworlds.serenity.widgets.SerenityGallery>
     </LinearLayout>
+    
+    <TextView android:id="@+id/episodeTVSeriesTitle"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dp"
+        style="@android:style/TextAppearance.Large"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="#80000000"
+        android:visibility="gone"/>
 
 </RelativeLayout>
