Initial cut at using Jelly Bean timedResources.
This didn't seem to work to well. Seems JellyBean wants the file on the
SD card or as a resource and not as a URI retrieved from the internet.

May have to just implement native handling ourselves instead of using
the built in API.

--- a/serenity-app/res/layout/video_playback.xml
+++ b/serenity-app/res/layout/video_playback.xml
@@ -12,5 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         />
+    
+    <TextView android:id="@+id/txtSubtitles"
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"
+        style="@android:style/TextAppearance.Medium"/>
 
 </RelativeLayout>
