Issue #29: Internal player support for Subtitle playback
The internal player will now display subtitles at the appropriate points
in time if a subtitle is selected before video playback begins.

Only SubRip (SRT) subtitles are currently supported.

--- a/serenity-app/res/layout/video_playback.xml
+++ b/serenity-app/res/layout/video_playback.xml
@@ -20,6 +20,6 @@
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:visibility="invisible"
-        style="@android:style/TextAppearance.Medium"/>
+        style="@android:style/TextAppearance.Large"/>
 
 </RelativeLayout>
