Issue #29: Add subtitle support of Episodes.
Adds the ability to select subtitles for episodes if they are available.
Re-Arranges some layouts to accommodate the subtitle support for the
Recently Aired, On Deck, and Recently Viewed items.

--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -80,7 +80,7 @@
         android:id="@+id/video_title_row"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/metaDataRow"
+        android:layout_below="@+id/episodeTVSeriesTitle"
         android:layout_toRightOf="@+id/video_details_2"
         android:layout_marginRight="6dp"
         android:background="#80000000"
@@ -103,8 +103,8 @@
     <LinearLayout
         android:id="@+id/video_details"
         android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@+id/metaDataRow"
+        android:layout_height="180dp"
+        android:layout_below="@+id/episodeTVSeriesTitle"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="4.5dp"
         android:layout_centerHorizontal="true"
@@ -163,8 +163,8 @@
     <LinearLayout
         android:id="@+id/video_details_2"
         android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@+id/metaDataRow"
+        android:layout_height="180dp"
+        android:layout_below="@+id/episodeTVSeriesTitle"
         android:layout_toRightOf="@+id/video_details"
         android:background="#80000000"
         android:orientation="vertical"
@@ -214,7 +214,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:gravity="left"
-                android:lines="5"
+                android:lines="4"
+                android:maxLines="4"
                 android:minWidth="50dp"
                 tools:ignore="SelectableText" />
         
@@ -225,7 +226,7 @@
     <LinearLayout
         android:id="@+id/video_summary_row"
         android:layout_width="fill_parent"
-        android:layout_height="172.5dp"
+        android:layout_height="150.5dp"
         android:layout_below="@+id/video_title_row"
         android:layout_toRightOf="@+id/video_details_2"
         android:layout_marginRight="6dp"
@@ -239,7 +240,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:lines="9"
+                android:lines="8"
+                android:maxLines="8"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textColor="#F0F0F0"
@@ -285,10 +287,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dip"
+        android:layout_marginTop="5dip"
         android:padding="5dp"
         android:gravity="bottom"
         android:background="#AA000000" >
@@ -305,12 +307,11 @@
     </LinearLayout>
     
     <TextView android:id="@+id/episodeTVSeriesTitle"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dp"
+        android:layout_below="@+id/metaDataRow"
         style="@android:style/TextAppearance.Large"
         android:textStyle="bold"
         android:gravity="center"
