--- a/serenity-app/res/layout/about.xml
+++ b/serenity-app/res/layout/about.xml
@@ -10,7 +10,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="left|center"
-            android:src="@drawable/serenity_logo2" />
+            android:src="@drawable/serenity_bonsai_logo" />
 
         <TextView
             android:id="@+id/info_text"
