Issue #73: Add movie studio images.

--- a/serenity-app/res/layout/activity_tvbrowser_show.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show.xml
@@ -110,7 +110,13 @@
                 <ImageView android:id="@+id/tvShowRating" 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"/>            
+                    android:layout_marginLeft="10dp"/>
+                
+                <ImageView android:id="@+id/tvShowStudio" 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"/>            
+                
                 
             </LinearLayout>
 
