--- a/serenity-app/res/layout/activity_tvbrowser_show.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show.xml
@@ -91,6 +91,25 @@
             android:layout_marginTop="30dp"
             android:layout_toRightOf="@+id/tvShowInfo"
             android:orientation="vertical" >
+            
+            <LinearLayout android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView android:id="@+id/tvShowRating" 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dip"
+                    android:layout_marginBottom="5dip"/>
+                
+                <ImageView android:id="@+id/tvShowStudio" 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dip"
+                    android:layout_marginRight="10dip"
+                    android:layout_marginBottom="5dip"/>
+                
+                
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -104,18 +123,10 @@
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:textColor="#F0F0F0"
+                    android:textStyle="bold"
                     tools:ignore="SelectableText" >
                 </TextView>
                 
-                <ImageView android:id="@+id/tvShowRating" 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"/>
-                
-                <ImageView android:id="@+id/tvShowStudio" 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>            
                 
                 
             </LinearLayout>
