--- a/serenity-app/res/layout/activity_tvbrowser_show.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show.xml
@@ -138,6 +138,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="5dp"
+                android:maxLines="7"
                 android:gravity="top"
                 android:textColor="#F0F0F0"
                 tools:ignore="SelectableText" >
@@ -145,11 +146,11 @@
 
             <TextView
                 android:id="@+id/tvShowBrowserGenre"
-                style="@android:style/TextAppearance.Small"
+                style="@android:style/TextAppearance.Medium"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:textColor="#F0F0F0"
                 tools:ignore="SelectableText" >
@@ -157,7 +158,7 @@
 
             <TextView
                 android:id="@+id/tvShowWatchedUnwatched"
-                style="@android:style/TextAppearance.Small"
+                style="@android:style/TextAppearance.Medium"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
