--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -5,6 +5,9 @@
         <EditTextPreference android:summary="The domain name or IP Address for your main plex media server. This takes preference over any Discovered Servers selected." android:title="Preferred Server Address" android:key="server" android:defaultValue=""/>
         <EditTextPreference android:summary="The port number for the server (usually 32400)." android:title="Server Port" android:key="serverport" android:defaultValue="32400"/>
     </PreferenceCategory>
+    <PreferenceCategory android:title="Layouts" >
+        <CheckBoxPreference android:summary="Prefer Poster Layout for Series (TV Shows)." android:title="Series Poster Layout" android:key="series_layout_posters"/>
+    </PreferenceCategory>
     <PreferenceCategory android:title="Media Player">
         <CheckBoxPreference android:summary="Use external media player." android:title="External Player" android:key="external_player"/>
         <CheckBoxPreference android:summary="Prefer plex media server's aspect ratio." android:title="Plex Aspect Ratio" android:key="plex_aspect_ratio"/>
