Add additional preferences for Grid layout and for Category filtering.

--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -5,8 +5,18 @@
         <EditTextPreference android:summary="The domain name or IP Address for your main plex media server. This takes preference over any Discovered Servers selected." android:title="Preferred Server Address" android:key="server" android:defaultValue=""/>
         <EditTextPreference android:summary="The port number for the server (usually 32400)." android:title="Server Port" android:key="serverport" android:defaultValue="32400"/>
     </PreferenceCategory>
+    <PreferenceCategory android:title="Prefered Filter">
+        <ListPreference
+            android:title="Select the starting category filter."
+            android:summary="Categories are used to select the starting filter when browsing movies and tv shows. The default is All."
+            android:key="serenity_category_filter"
+            android:defaultValue="all"
+            android:entries="@array/categoryListNames"
+            android:entryValues="@array/categoryListValues" />        
+    </PreferenceCategory>
     <PreferenceCategory android:title="Layouts" >
         <CheckBoxPreference android:summary="Prefer Poster Layout for Series (TV Shows)." android:title="Series Poster Layout" android:key="series_layout_posters"/>
+        <CheckBoxPreference android:summary="Poster grid layout for movies." android:title="Grid Poster Layout" android:key="series_layout_grid"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="Media Player">
         <CheckBoxPreference android:summary="Use external media player." android:title="External Player" android:key="external_player"/>
