Issue #70: Force MX Player to always use Plex View Offset.
This change adds the ability to use the plex resume offset.  In addition
there are some code refactorings for video listeners.

--- a/serenity-app/res/layout/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show_banners.xml
@@ -81,6 +81,7 @@
                 android:background="#F0F0F0"
                 android:padding="2dp"
                 android:scaleType="fitXY"
+                android:visibility="gone"
                 tools:ignore="ContentDescription" />
         </LinearLayout>
 
