Issue #86: Add ratings to shows/movies.
Added the ratings indicators to the movies.  This is a four star rating
due to space limitations on the screen currently.  The value retrieved from
plex is divided by 2.5 to obtain a rating that fits in the 4 star view.

--- a/serenity-app/res/layout/activity_plex_app_main.xml
+++ b/serenity-app/res/layout/activity_plex_app_main.xml
@@ -3,9 +3,14 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/serenity_bonsai_logo"
     android:orientation="vertical"
     tools:context=".MainActivity" >
+    
+    <ImageView android:id="@+id/mainGalleryBackground" 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:src="@drawable/serenity_bonsai_logo"/>
     
     <DigitalClock
             android:layout_width="wrap_content"
