--- a/serenity-app/res/layout/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout/activity_tvbrowser_show_banners.xml
@@ -92,24 +92,35 @@
             android:layout_marginTop="30dp"
             android:layout_toRightOf="@+id/tvShowInfo"
             android:orientation="vertical" >
-            
-            <LinearLayout android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView android:id="@+id/tvShowRating" 
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/tvShowRating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dip"
-                    android:layout_marginBottom="5dip"/>
-                
-                <ImageView android:id="@+id/tvShowStudio" 
+                    android:layout_marginBottom="5dip"
+                    android:layout_marginRight="5dip" />
+
+                <ImageView
+                    android:id="@+id/tvShowStudio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dip"
                     android:layout_marginLeft="15dip"
-                    android:layout_marginRight="10dip"
-                    android:layout_marginBottom="5dip"/>
-                
-                
+                    android:layout_marginRight="10dip" />
+
+                <RatingBar
+                    android:id="@+id/tvRatingbar"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="4"
+                    android:stepSize="0.1" >
+                </RatingBar>
             </LinearLayout>
 
             <LinearLayout
@@ -127,9 +138,6 @@
                     android:textStyle="bold"
                     tools:ignore="SelectableText" >
                 </TextView>
-                
-                
-                
             </LinearLayout>
 
             <TextView
@@ -139,8 +147,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="5dp"
-                android:maxLines="7"
                 android:gravity="top"
+                android:maxLines="7"
                 android:textColor="#F0F0F0"
                 tools:ignore="SelectableText" >
             </TextView>
