--- a/serenity-app/res/layout/activity_music_track.xml
+++ b/serenity-app/res/layout/activity_music_track.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:id="@+id/musicAlbumImage"
         android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_height="380dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
@@ -34,5 +34,76 @@
         android:descendantFocusability="afterDescendants"
         android:scrollbars="vertical"
         android:scrollingCache="true" />
+    
+    <LinearLayout
+        android:id="@+id/mediacontroller_progress_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/musicAlbumImage"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="#50000000"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/mediacontroller_time_current"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="00:00"
+            android:textColor="#F0F0F0"
+            tools:ignore="SelectableText" />
+
+        <SeekBar
+            android:id="@+id/mediacontroller_seekbar"
+            android:layout_width="300dp"
+            android:layout_height="15dp"
+            android:focusable="true"
+            android:max="1000"
+            android:minWidth="300dp"
+            android:nextFocusDown="@+id/mediacontroller_play_pause" />
+
+        <TextView
+            android:id="@+id/mediacontroller_time_total"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#F0F0F0"
+            android:text="00:00"
+            tools:ignore="SelectableText" />
+
+    </LinearLayout>
+    
+    <ImageButton android:id="@+id/audioSkipBack"
+        android:src="@drawable/osd_rewind_nf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="10dp" 
+        android:layout_below="@+id/mediacontroller_progress_layout"
+        />
+    
+    <ImageButton android:id="@+id/audioPause"
+        android:layout_marginTop="10dp" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" 
+        android:src="@drawable/osd_pause_nf" 
+        android:layout_below="@+id/mediacontroller_progress_layout"
+        android:layout_toRightOf="@+id/audioSkipBack"
+        />
+    
+    <ImageButton android:id="@+id/audioSkipForward"
+        android:layout_marginTop="10dp" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" 
+        android:src="@drawable/osd_forward_nf" 
+        android:layout_below="@+id/mediacontroller_progress_layout"
+        android:layout_toRightOf="@+id/audioPause"
+        />
+    
 
 </RelativeLayout>
