--- a/serenity-app/res/layout/track_listview_layout.xml
+++ b/serenity-app/res/layout/track_listview_layout.xml
@@ -16,7 +16,7 @@
         android:layout_toRightOf="@+id/trackPlayed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@android:style/TextAppearance.Medium"
+        style="@android:style/TextAppearance.Large"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:textColor="#F0F0F0"
@@ -27,9 +27,10 @@
         android:gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@android:style/TextAppearance.Medium"
+        style="@android:style/TextAppearance.Large"
         android:textColor="#F0F0F0"
         android:layout_marginRight="5dp"
         />
+    
     
 </RelativeLayout>
